--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -91,6 +91,7 @@
     
             .sidenav-link-text {
                 margin-left: 1.5rem;
+                white-space: nowrap;
             }
     
         }
@@ -111,5 +112,6 @@
     .sidenav-link-icon,
     .sidenav-link-text {
         color: #000;
+        white-space: nowrap;
     }
 }
