--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,4 +17,5 @@
 body {
   position: relative;
   font-family: 'Roboto',"OpenSans", "arial", sans-serif;
+  background-color: rgb(226, 226, 226);
 }
