--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -54,7 +54,7 @@
                         focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none
                         dark:bg-slate-900 dark:border-gray-700 dark:text-gray-400 dark:focus:ring-gray-600 focus:pt-6
                         focus:pb-2 [&:not(:placeholder-shown)]:pt-6 [&:not(:placeholder-shown)]:pb-2 autofill:pt-6
-                        autofill:pb-2" placeholder="Identifiant" formControlName="username" />
+                        autofill:pb-2" placeholder="" formControlName="username" />
                         <div *ngIf="loginForm.get('username')?.invalid && loginForm.get('username')?.touched"
                           class="absolute inset-y-0 end-0 flex items-center pointer-events-none pe-3">
                           <svg class="flex-shrink-0 h-4 w-4 text-red-500" xmlns="http://www.w3.org/2000/svg" width="24"
@@ -78,7 +78,7 @@
                           [class.dangerField]="loginForm.get('password')?.invalid && loginForm.get('password')?.touched"
                           type="password" id="password"
                           class="peer p-4 block w-full border-gray-200 rounded-lg text-sm placeholder:text-transparent focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-gray-400 dark:focus:ring-gray-600 focus:pt-6 focus:pb-2 [&:not(:placeholder-shown)]:pt-6 [&:not(:placeholder-shown)]:pb-2 autofill:pt-6 autofill:pb-2"
-                          placeholder="********" formControlName="password" />
+                          placeholder="" formControlName="password" />
 
                         <button type="button" data-hs-toggle-password='{
                             "target": "#password"
