Restructuration du projet

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -119,7 +119,7 @@
 
                     <div class="relative col-span-full">
                       <a class="cursor-pointer text-sm text-gray-600 dark:text-gray-400 hover:text-gray-800 float-right"
-                        routerLink="/password/reset">Mot
+                        routerLink="/auth/reset-password">Mot
                         de
                         passe oublié ?</a>
                     </div>
