--- a/src/app/core/components/sidenav/sidenav.component.scss
+++ b/src/app/core/components/sidenav/sidenav.component.scss
@@ -1,25 +1,60 @@
-// .sidenav {
-//     width: 250px; /* ou la largeur que vous souhaitez */
-//     position: fixed;
-//     z-index: 1; /* Pour rester au-dessus du contenu de la page */
-//     top: 0; /* Aligner au haut de la page */
-//     left: 0; /* Aligner à gauche de la page */
-//     overflow-x: hidden; /* Cacher le débordement horizontal */
-//     padding-top: 20px;
-//     height: 100vh; /* Pleine hauteur */
-//     background-color: aqua;
-//   }
-  
-//   /* Style pour les éléments de navigation dans la sidenav */
-//   .sidenav a {
-//     padding: 6px 8px 6px 16px;
-//     text-decoration: none;
-//     font-size: 25px;
-//     color: #818181;
-//     display: block;
-//   }
-  
-//   .sidenav a:hover {
-//     color: #f1f1f1;
-//   }
-  
+.main-layout {
+  display: flex; /* Utilisez flexbox pour aligner les éléments horizontalement */
+  height: 100vh; /* Assurez-vous que le layout prend toute la hauteur de la fenêtre */
+}
+
+.active {
+  color: rgb(37 99 235);
+  background-color: rgb(239, 244, 255);
+}
+
+#application-sidebar {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.user-profile-container {
+  position: relative;
+}
+
+.user-profile {
+  // border-top: 1px solid #eaeaea; /* Ajoute une ligne séparatrice */
+  margin-top: auto;
+}
+
+.user-profile img {
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+#dropdownMenu {
+  position: absolute;
+  bottom: 100%; /* Positionner au bas de l'élément User Profile */
+  background-color: rgb(243 244 246);
+  opacity: 0; /* Commencer avec une opacité de 0 pour un effet de fade in */
+  transition: transform 0.3s ease, visibility 0.3s ease, opacity 0.3s ease;
+  transform: translateY(0); /* Commencer à la position normale */
+  visibility: hidden; /* Rendre le menu invisible par défaut */
+  z-index: 100;
+  display: flex;
+  flex-direction: column;
+  width: 214px;
+  border: 1px solid rgb(229 231 235);
+}
+
+#dropdownMenu.active {
+  transform: translateY(-6%); /* Déplacer le menu vers le haut */
+  visibility: visible; /* Rendre le menu visible lorsqu'il est actif */
+  opacity: 1;
+}
+
+.active-menu {
+  background-color: rgb(243 244 246);
+}
+
+.prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
