Get des informations de l'utilisateur

--- a/src/app/core/components/main-layout/main-layout.component.html
+++ b/src/app/core/components/main-layout/main-layout.component.html
@@ -4,9 +4,7 @@
   <!-- Sidenav -->
 
   <!-- Content -->
-  <div
-    class="w-full pt-10 px-4 sm:px-6 md:px-8 lg:ps-72 h-screen bg-gradient-to-bl from-blue-50 via-transparent"
-  >
+  <div class="w-full pt-10 px-4 sm:px-6 md:px-8 lg:ps-72 h-screen bg-gradient-to-bl from-blue-50 via-transparent">
     <router-outlet></router-outlet>
   </div>
   <!-- End Content -->
