--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -26,7 +26,7 @@
 
 <!-- Sidebar -->
 <div id="application-sidebar"
-  class="hs-overlay hs-overlay-open:translate-x-0 -translate-x-full transition-all duration-300 transform hidden fixed top-0 start-0 bottom-0 z-[60] w-64 bg-white border-e border-gray-200 pt-7 pb-10 overflow-y-auto lg:block lg:translate-x-0 lg:end-auto lg:bottom-0 [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-slate-700 dark:[&::-webkit-scrollbar-thumb]:bg-slate-500 dark:bg-gray-800 dark:border-gray-700">
+  class="prevent-select hs-overlay hs-overlay-open:translate-x-0 -translate-x-full transition-all duration-300 transform hidden fixed top-0 start-0 bottom-0 z-[60] w-64 bg-white border-e border-gray-200 pt-7 pb-10 overflow-y-auto lg:block lg:translate-x-0 lg:end-auto lg:bottom-0 [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-slate-700 dark:[&::-webkit-scrollbar-thumb]:bg-slate-500 dark:bg-gray-800 dark:border-gray-700">
   <div class="px-6 bg-transparent">
     <a routerLink="/dashboard" class="flex-none text-xl font-semibold dark:text-white" aria-label="Brand">
       <div class="flex gap-3 justify-between">
@@ -102,8 +102,10 @@
 
     <!-- Menu déroulant -->
     <div class="mt-auto pr-5">
-      <div id="dropdownMenu" class="rounded-lg border-gray-200 text-sm text-slate-700" [class.active]="menuActive">
-        <a as="button" class="text-slate-700 p-2 hover:bg-gray-200 flex items-center gap-2.5" href="/settings">
+      <div routerLink="/settings" id="dropdownMenu"
+        class="rounded-lg border-gray-200 text-sm text-slate-700 cursor-pointer pt-1.5 pb-1.5"
+        [class.active]="menuActive">
+        <a as="button" class="text-slate-700 p-2 hover:bg-gray-200 flex items-center gap-2.5">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
             stroke="currentColor" class="w-5 h-5">
             <path stroke-linecap="round" stroke-linejoin="round"
