--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,9 @@
 body {
   font-family: "OpenSans", "arial", sans-serif;
 }
+
+.prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
