--- a/src/app/absences/components/single-absence/single-absence.component.html
+++ b/src/app/absences/components/single-absence/single-absence.component.html
@@ -4,8 +4,8 @@
   <p>Absence {{ this.absence.justify ? 'justifiée' : 'non justifiée' }}</p> 
       
   <p>Le {{ this.absence.course_date | date:"dd/MM/yyyy"}}</p>
-  <p>De {{ this.absence.course_start_time }} à {{ this.absence.course_end_time}}</p>
-  <p></p>
+  <p>De {{ this.dateStart | date:"hh:mm" }} à {{ this.dateEnd | date:"hh:mm" }}</p>
+  <p>Soit {{this.calculateHourDifference(this.dateStart,this.dateEnd)}}h d'absence</p>
       
 
 </div>
