Inputs des paramètres du compte

--- a/src/app/settings/components/settings-sidenav/settings-sidenav.component.html
+++ b/src/app/settings/components/settings-sidenav/settings-sidenav.component.html
@@ -1,8 +1,8 @@
-<div class="bg-white h-screen border-e border-gray-200" style="width: 24rem">
+<div class="bg-white h-screen border-e border-gray-200 fixed" style="width: 24rem">
 
     <!-- Header de la sidebar -->
     <div class="sidebar-title" style="padding: 32px">
-        <h1 class="text-2xl font-bold">Paramètres</h1>
+        <h1 class="text-2xl font-bold text-gray-700">Paramètres</h1>
     </div>
 
     <!-- Element sidebar -->
@@ -55,7 +55,7 @@
         </div>
         <div>
             <h1 class="text-sm mb-1.5 font-medium">Notifications</h1>
-            <p class="text-sm text-slate-700">Gérez quand vous voulez recevoir une notification et sur quels canaux</p>
+            <p class="text-sm text-slate-700">Gérez quand vous voulez être notifié et sur quels canaux</p>
         </div>
     </div>
     <!-- Fin Element sidebar -->
