--- a/src/app/settings/components/settings-layout/settings-layout.component.html
+++ b/src/app/settings/components/settings-layout/settings-layout.component.html
@@ -1,4 +1,6 @@
 <div class="flex">
     <app-settings-sidenav></app-settings-sidenav>
-    <router-outlet></router-outlet>
+    <div class="mt-8 w-2/4" style="margin-left: 440px;">
+        <router-outlet></router-outlet>
+    </div>
 </div>
