Démarrage Sidebar distincte en fonction du role

--- a/src/app/core/components/sidenav/sidenav.component.scss
+++ b/src/app/core/components/sidenav/sidenav.component.scss
@@ -3,7 +3,7 @@
   height: 100vh; /* Assurez-vous que le layout prend toute la hauteur de la fenêtre */
 }
 
-.active {
+.active-navlink {
   color: rgb(37 99 235);
   background-color: rgb(239, 244, 255);
 }
