--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -126,9 +126,14 @@
                   </div>
 
                   <div class="mt-5">
-                    <button type="submit"
-                      class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600">
-                      Se connecter
+                    <button type="submit" [disabled]="isLoading"
+                      class="w-full py-3 px-4 inline-flex items-center justify-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600">
+
+                      <span *ngIf="isLoading"
+                        class="animate-spin inline-block w-4 h-4 border-[3px] border-current border-t-transparent text-white rounded-full"
+                        role="status" aria-label="loading"></span>
+
+                      <span *ngIf="!isLoading" class="loginBtntext">Se connecter</span>
                     </button>
                   </div>
 
