--- a/src/app/dashboard/components/dashboard-home/dashboard-home.component.html
+++ b/src/app/dashboard/components/dashboard-home/dashboard-home.component.html
@@ -2,5 +2,25 @@
     <h1>Tableau de Bord</h1>
     <!-- Vous pouvez ajouter des composants de carte de statistiques ici -->
 
+    <!-- parent.component.html -->
+    <button (click)="modal.open()">Open Danger Modal</button>
+    <app-modals #modal modalType="danger" (closeEvent)="onModalClose()">
+        <div modal-title>
+            Delete Personal Account
+        </div>
+        <div modal-body>
+            <p class="text-gray-500">
+                Permanently remove your Personal Account and all of its contents from the Vercel platform. This action
+                is not reversible, so please continue with caution.
+            </p>
+        </div>
+        <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6" modal-footer>
+            <button type="button"
+                class="mr-2 inline-flex w-full justify-center rounded-md bg-red-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 sm:ml-3 sm:w-auto">Deactivate</button>
+            <button type="button"
+                class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto">Cancel</button>
+        </div>
+    </app-modals>
+
     <!-- Ajoutez d'autres composants ou éléments de tableau de bord ici -->
 </div>
