--- a/src/app/dashboard/components/dashboard-home/dashboard-home.component.html
+++ b/src/app/dashboard/components/dashboard-home/dashboard-home.component.html
@@ -3,35 +3,14 @@
     <!-- Vous pouvez ajouter des composants de carte de statistiques ici -->
 
     <!-- parent.component.html -->
-    <button (click)="modalDanger.open()">Open Danger Modal</button>
-    <app-modals #modalDanger modalType="danger">
-        <div modal-title>Supprimer cet utilisateur</div>
-        <div modal-body>
-            Permanently remove your Personal Account and all of its contents from the Vercel platform. This action
-            is not reversible, so please continue with caution.
-        </div>
-        <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6" modal-footer>
-            <button type="button"
-                class="mr-2 inline-flex w-full justify-center rounded-md bg-red-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 sm:ml-3 sm:w-auto">Deactivate</button>
-            <button type="button" (click)="modalDanger.close()"
-                class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto">Cancel</button>
-        </div>
-    </app-modals>
+    <button (click)="openModal('successModal')">Open Success Modal</button>
+    <button (click)="openModal('dangerModal')">Open Danger Modal</button>
 
-    <button (click)="modalSuccess.open()">Open Success Modal</button>
-    <app-modals #modalSuccess modalType="success">
-        <div modal-title>Ajouter</div>
-        <div modal-body>
-            Permanently remove your Personal Account and all of its contents from the Vercel platform. This action
-            is not reversible, so please continue with caution.
-        </div>
-        <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6" modal-footer>
-            <button type="button"
-                class="mr-2 inline-flex w-full justify-center rounded-md bg-red-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 sm:ml-3 sm:w-auto">Deactivate</button>
-            <button type="button" (click)="modalSuccess.close()"
-                class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto">Cancel</button>
-        </div>
-    </app-modals>
+    <app-modal id="successModal">
+        Bonjour
+    </app-modal>
 
-    <!-- Ajoutez d'autres composants ou éléments de tableau de bord ici -->
+    <app-modal id="dangerModal">
+        <!-- Contenu du modal de danger -->
+    </app-modal>
 </div>
