--- a/src/app/dashboard/components/dashboard-home/dashboard-home.component.html
+++ b/src/app/dashboard/components/dashboard-home/dashboard-home.component.html
@@ -3,24 +3,8 @@
     <!-- Vous pouvez ajouter des composants de carte de statistiques ici -->
 
     <!-- parent.component.html -->
-    <button (click)="openModal('successModal')">Open Success Modal</button>
-    <button (click)="openModal('dangerModal')">Open Danger Modal</button>
-
-    <app-modal id="successModal" modalType="success" modalTitle="Opération réussie" modalDesc="Vous avez réussi">
-        <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6">
-            <button type="button"
-                class="mr-2 inline-flex w-full justify-center rounded-md bg-red-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 sm:ml-3 sm:w-auto">Deactivate</button>
-            <button type="button"
-                class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto">Cancel</button>
-        </div>
-    </app-modal>
-
-    <app-modal id="dangerModal" modalType="danger" modalTitle="Opération échouée" modalDesc="Vous avez raté">
-        <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6">
-            <button type="button"
-                class="inline-flex w-full justify-center rounded-md bg-red-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 sm:ml-3 sm:w-auto">Deactivate</button>
-            <button type="button"
-                class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto">Cancel</button>
-        </div>
-    </app-modal>
+    <button (click)="openSuccessModal()">Open Success Modal</button>
+    <button (click)="openDangerModal()">Open Danger Modal</button>
+    <app-modal id="successModal"></app-modal>
+    <app-modal id="dangerModal"></app-modal>
 </div>
