--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -1,7 +1,7 @@
 <!-- modal.component.html -->
 <div *ngIf="visible" class="modal-backdrop" [ngClass]="{'show': visible}" (click)="close()">
     <div class="modal-wrapper">
-        <div class="modal-container" [ngSwitch]="modalType">
+        <div class="modal-container" [ngSwitch]="modalData?.type">
 
             <ng-container *ngSwitchCase="'danger'">
                 <div>
@@ -24,16 +24,18 @@
                                         <div class="mt-3 text-center sm:ml-4 sm:mt-0 sm:text-left">
                                             <h3 class="text-base font-semibold leading-6 text-gray-900"
                                                 id="modal-title">
-                                                {{ modalTitle }}
+                                                {{ modalData?.title }}
                                             </h3>
                                             <div class="mt-2">
-                                                <p class="text-sm text-gray-500">{{ modalDesc }}</p>
+                                                <p class="text-sm text-gray-500">{{ modalData?.description }}</p>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div>
-                                    <ng-content></ng-content>
+                                <div class="modal-footer">
+                                    <div *ngFor="let button of modalData?.buttons">
+                                        <button (click)="button.action()">{{ button.text }}</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -62,17 +64,30 @@
                                         <div class="mt-3 text-center sm:ml-4 sm:mt-0 sm:text-left">
                                             <h3 class="text-base font-semibold leading-6 text-gray-900"
                                                 id="modal-title">
-                                                {{ modalTitle }}
+                                                {{ modalData?.title }}
                                             </h3>
                                             <div class="mt-2">
-                                                <p class="text-sm text-gray-500">{{ modalDesc }}</p>
+                                                <p class="text-sm text-gray-500">{{ modalData?.description }}</p>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div>
-                                    <ng-content></ng-content>
+                                <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6 modal-footer">
+                                    <button *ngFor="let button of modalData?.buttons; let i = index"
+                                        (click)="button.action()" type="button"
+                                        class="mt-3 gap-2 inline-flex w-full justify-center rounded-md px-3 py-2 text-sm font-semibold shadow-sm sm:mt-0 sm:w-auto"
+                                        [ngClass]="{
+                                              'bg-red-600 hover:bg-red-500 text-white': button.type === 'danger',
+                                              'bg-white ring-1 ring-inset ring-gray-300 hover:bg-gray-50': button.type === 'cancel',
+                                              'bg-green-600 hover:bg-green-500': button.type === 'success',
+                                              'bg-gray-600 hover:bg-gray-500': button.type === 'default',
+                                              'mr-2': i === 1 || i === 2 || i === 3
+                                            }">
+                                        {{ button.text }}
+                                    </button>
                                 </div>
+
+
                             </div>
                         </div>
                     </div>
