--- a/src/app/dashboard/components/dashboard-home/dashboard-home.component.html
+++ b/src/app/dashboard/components/dashboard-home/dashboard-home.component.html
@@ -3,8 +3,6 @@
     <!-- Vous pouvez ajouter des composants de carte de statistiques ici -->
 
     <!-- parent.component.html -->
-    <button (click)="openSuccessModal()">Open Success Modal</button>
-    <button (click)="openDangerModal()">Open Danger Modal</button>
-    <app-modal id="successModal"></app-modal>
-    <app-modal id="dangerModal"></app-modal>
+    <button (click)="openAccountDeactivationModal()">Désactiver mon compte</button>
+    <app-modal id="accountDeactivateModal"></app-modal>
 </div>
