--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -77,11 +77,11 @@
                                         (click)="button.action()" type="button"
                                         class="mt-3 gap-2 inline-flex w-full justify-center rounded-md px-3 py-2 text-sm font-semibold shadow-sm sm:mt-0 sm:w-auto"
                                         [ngClass]="{
-                                              'bg-red-600 hover:bg-red-500 text-white': button.type === 'danger',
-                                              'bg-white ring-1 ring-inset ring-gray-300 hover:bg-gray-50': button.type === 'cancel',
-                                              'bg-green-600 hover:bg-green-500': button.type === 'success',
-                                              'bg-gray-600 hover:bg-gray-500': button.type === 'default',
-                                              'mr-2': i === 1 || i === 2 || i === 3
+                                              'bg-red-600 hover:bg-red-500': button.type === 'danger',
+                                              'bg-white ring-1 ring-inset ring-gray-300 hover:bg-gray-50 text-gray-900': button.type === 'cancel' || button.type === 'default',
+                                              'bg-blue-600 hover:bg-blue-500': button.type === 'ok',
+                                              'mr-3': i === 1 || i === 2 || i === 3,
+                                              'text-white' : button.type === 'danger' || button.type === 'ok'
                                             }">
                                         {{ button.text }}
                                     </button>
