--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -16,7 +16,7 @@
     <!-- Breadcrumb -->
     <ol class="ms-3 flex items-center whitespace-nowrap" aria-label="Breadcrumb">
       <li class="text-sm font-semibold text-gray-800 truncate dark:text-gray-400" aria-current="page">
-        Tableau de bord
+        {{ currentPageName }}
       </li>
     </ol>
     <!-- End Breadcrumb -->
