--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "primeicons/primeicons.css";
 
 body {
-  font-family: "OpenSans", "arial", sans-serif;
+    margin: 0;
+    padding: 0;
 }
