--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -18,22 +18,32 @@
             <div pRipple class="p-3 flex align-items-center justify-content-between text-600 cursor-pointer"
               pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
               leaveActiveClass="slideup">
-              <span class="font-medium">FAVORITES</span>
+              <span class="font-medium">L'ENT</span>
               <i class="pi pi-chevron-down"></i>
             </div>
             <ul class="list-none p-0 m-0 overflow-hidden">
-              <li>
+              <li routerLink="/dashboard">
                 <a pRipple
-                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
-                  <i class="pi pi-home mr-2"></i>
-                  <span class="font-medium">Dashboard</span>
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors"
+                  routerLinkActive="active-navlink">
+                  <i class="pi pi-home mr-2" routerLinkActive="active-navlink"></i>
+                  <span class="font-medium" routerLinkActive="active-navlink">Tableau de bord</span>
                 </a>
               </li>
-              <li>
+              <li routerLink="/timetable">
                 <a pRipple
-                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
-                  <i class="pi pi-bookmark mr-2"></i>
-                  <span class="font-medium">Bookmarks</span>
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors"
+                  routerLinkActive="active-navlink">
+                  <i class="pi pi-calendar mr-2" routerLinkActive="active-navlink"></i>
+                  <span class="font-medium" routerLinkActive="active-navlink">Emploi du temps</span>
+                </a>
+              </li>
+              <li routerLink="/absences">
+                <a pRipple
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors"
+                  routerLinkActive="active-navlink">
+                  <i class="pi pi-user-minus mr-2" routerLinkActive="active-navlink"></i>
+                  <span class="font-medium" routerLinkActive="active-navlink">Absences</span>
                 </a>
               </li>
               <li>
@@ -42,7 +52,7 @@
                   pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
                   leaveActiveClass="slideup">
                   <i class="pi pi-chart-line mr-2"></i>
-                  <span class="font-medium">Reports</span>
+                  <span class="font-medium">Statistiques</span>
                   <i class="pi pi-chevron-down ml-auto"></i>
                 </a>
                 <ul
@@ -82,37 +92,6 @@
                     </a>
                   </li>
                 </ul>
-              </li>
-              <li>
-                <a pRipple
-                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
-                  <i class="pi pi-users mr-2"></i>
-                  <span class="font-medium">Team</span>
-                </a>
-              </li>
-              <li>
-                <a pRipple
-                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
-                  <i class="pi pi-comments mr-2"></i>
-                  <span class="font-medium">Messages</span>
-                  <span
-                    class="inline-flex align-items-center justify-content-center ml-auto bg-blue-500 text-0 border-circle"
-                    style="min-width: 1.5rem; height: 1.5rem">3</span>
-                </a>
-              </li>
-              <li>
-                <a pRipple
-                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
-                  <i class="pi pi-calendar mr-2"></i>
-                  <span class="font-medium">Calendar</span>
-                </a>
-              </li>
-              <li>
-                <a pRipple
-                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
-                  <i class="pi pi-cog mr-2"></i>
-                  <span class="font-medium">Settings</span>
-                </a>
               </li>
             </ul>
           </li>
@@ -163,7 +142,7 @@
           </li>
           <li>
             <a pRipple class="flex align-items-center cursor-pointer p-3 hover:surface-100 border-round text-700
-                        transition-duration-150 transition-colors">
+                        transition-duration-150 transition-colors" (click)="logout()">
               <i class="pi pi-sign-out mr-2"></i>
               <span class="font-medium">Se déconnecter</span>
             </a>
