--- a/src/app/core/components/sidenav/sidenav.component.scss
+++ b/src/app/core/components/sidenav/sidenav.component.scss
@@ -2,3 +2,8 @@
   color: rgb(37 99 235);
   background-color: rgb(239, 244, 255);
 }
+
+.active-navlink:hover {
+  color: rgb(37 99 235);
+  background-color: rgb(239, 244, 255);
+}
