--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -1,30 +1,24 @@
-<div class="min-h-screen flex relative lg:static surface-ground">
+<div class="min-h-screen flex relative lg:static surface-100">
   <div id="app-sidebar"
     class="surface-section h-full lg:h-auto hidden lg:block flex-shrink-0 absolute lg:static left-0 top-0 z-1 border-right-1 surface-border select-none"
     style="width:280px">
-    <div class="flex flex-column h-full">
-      <div class="flex align-items-center px-5 flex-shrink-0 gap-3">
+    <div class="fixed flex flex-column h-full" style="width:280px">
+      <div class="flex align-items-center px-5 flex-shrink-0 gap-3 pt-1 cursor-pointer" routerLink="/dashboard">
         <div>
-          <img src="assets/images/logo-iut-shorted.png" style="width: 48px; height: 48px" />
+          <img src="assets/images/logo-iut-shorted.png" style="width: 41px; height: 41px" />
         </div>
         <div class="flex-column">
-          <h1 class="text-xl">ENT</h1>
+          <h1 class="text-base">ENT</h1>
           <p class="-mt-2 text-sm">IUT de Montreuil</p>
         </div>
       </div>
-      <div class="overflow-y-auto">
+      <div class="overflow-y-auto mt-1 mr-1 ml-1">
         <ul class="list-none p-3 m-0">
           <li>
-            <div pRipple class="p-3 flex align-items-center justify-content-between text-600 cursor-pointer"
-              pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
-              leaveActiveClass="slideup">
-              <span class="font-medium">L'ENT</span>
-              <i class="pi pi-chevron-down"></i>
-            </div>
             <ul class="list-none p-0 m-0 overflow-hidden">
               <li routerLink="/dashboard">
                 <a pRipple
-                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors"
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2"
                   routerLinkActive="active-navlink">
                   <i class="pi pi-home mr-2" routerLinkActive="active-navlink"></i>
                   <span class="font-medium" routerLinkActive="active-navlink">Tableau de bord</span>
@@ -32,7 +26,7 @@
               </li>
               <li routerLink="/timetable">
                 <a pRipple
-                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors"
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2"
                   routerLinkActive="active-navlink">
                   <i class="pi pi-calendar mr-2" routerLinkActive="active-navlink"></i>
                   <span class="font-medium" routerLinkActive="active-navlink">Emploi du temps</span>
@@ -40,7 +34,7 @@
               </li>
               <li routerLink="/absences">
                 <a pRipple
-                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors"
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2"
                   routerLinkActive="active-navlink">
                   <i class="pi pi-user-minus mr-2" routerLinkActive="active-navlink"></i>
                   <span class="font-medium" routerLinkActive="active-navlink">Absences</span>
@@ -48,7 +42,7 @@
               </li>
               <li>
                 <a pRipple
-                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors"
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2"
                   pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
                   leaveActiveClass="slideup">
                   <i class="pi pi-chart-line mr-2"></i>
@@ -59,7 +53,7 @@
                   class="list-none py-0 pl-3 pr-0 m-0 hidden overflow-y-hidden transition-all transition-duration-400 transition-ease-in-out">
                   <li>
                     <a pRipple
-                      class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors"
+                      class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2"
                       pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
                       leaveActiveClass="slideup">
                       <i class="pi pi-chart-line mr-2"></i>
@@ -70,14 +64,14 @@
                       class="list-none py-0 pl-3 pr-0 m-0 hidden overflow-y-hidden transition-all transition-duration-400 transition-ease-in-out">
                       <li>
                         <a pRipple
-                          class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
+                          class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2">
                           <i class="pi pi-table mr-2"></i>
                           <span class="font-medium">View</span>
                         </a>
                       </li>
                       <li>
                         <a pRipple
-                          class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
+                          class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2">
                           <i class="pi pi-search mr-2"></i>
                           <span class="font-medium">Search</span>
                         </a>
@@ -107,21 +101,21 @@
             <ul class="list-none p-0 m-0 overflow-hidden">
               <li>
                 <a pRipple
-                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2">
                   <i class="pi pi-folder mr-2"></i>
                   <span class="font-medium">Projects</span>
                 </a>
               </li>
               <li>
                 <a pRipple
-                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2">
                   <i class="pi pi-chart-bar mr-2"></i>
                   <span class="font-medium">Performance</span>
                 </a>
               </li>
               <li>
                 <a pRipple
-                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2">
                   <i class="pi pi-cog mr-2"></i>
                   <span class="font-medium">Settings</span>
                 </a>
@@ -158,15 +152,15 @@
       </div>
     </div>
   </div>
-  <div class="min-h-screen flex flex-column relative flex-auto">
+  <div class="min-h-screen flex flex-column relative flex-auto fixed top-0">
     <div
-      class="flex justify-content-between align-items-center px-5 surface-0 border-bottom-1 surface-border relative lg:static"
+      class="fixed top-0 flex justify-content-between align-items-center px-5 surface-0 border-bottom-1 surface-border relative lg:static"
       style="height:60px">
       <div class="flex">
         <a pRipple class="cursor-pointer block lg:hidden text-700 mr-3" pStyleClass="#app-sidebar" enterClass="hidden"
           enterActiveClass="fadeinleft" leaveToClass="hidden" leaveActiveClass="fadeoutleft"
           [hideOnOutsideClick]="true">
-          <i class="pi pi-bars text-4xl"></i>
+          <i class="pi pi-bars text-4xl" style="margin-top: 6px;"></i>
         </a>
         <span class="p-input-icon-left">
           <i class="pi pi-search"></i>
@@ -175,7 +169,7 @@
       </div>
       <a pRipple class="cursor-pointer block lg:hidden text-700" pStyleClass="@next" enterClass="hidden"
         enterActiveClass="fadein" leaveToClass="hidden" leaveActiveClass="fadeout" [hideOnOutsideClick]="true">
-        <i class="pi pi-ellipsis-v text-2xl"></i>
+        <i class="pi pi-ellipsis-v text-2xl" style="margin-top: 3px;"></i>
       </a>
       <ul
         class="list-none p-0 m-0 hidden lg:flex lg:align-items-center select-none lg:flex-row 
@@ -199,18 +193,18 @@
                       transition-duration-150 transition-colors">
             <img src="assets/images/sching.gif" class="mr-3 lg:mr-0" style="width: 32px; height: 32px" />
             <div class="block lg:hidden">
-              <div class="text-900 font-medium">Josephine Lillard</div>
-              <span class="text-600 font-medium text-sm">Marketing Specialist</span>
+              <div class="text-900 font-medium">Steven Ching</div>
+              <span class="text-600 font-medium text-sm">Étudiant</span>
             </div>
           </a>
         </li>
       </ul>
     </div>
-    <div class="flex flex-column flex-auto">
+    <div class="flex flex-column flex-auto" style="height: calc(100vh - 60px); overflow: auto;">
       <div class="surface-section p-5 pt-2 pb-2">
         <h1>{{ currentPageName }}</h1>
       </div>
-      <div class="p-5 pt-2">
+      <div class="p-5 pt-2 sur">
         <router-outlet></router-outlet>
       </div>
     </div>
