--- a/src/app/core/components/sidenav/sidenav.component.scss
+++ b/src/app/core/components/sidenav/sidenav.component.scss
@@ -4,6 +4,6 @@
 }
 
 .active-navlink:hover {
-  color: rgb(37 99 235);
-  background-color: rgb(239, 244, 255);
+  color: rgb(37 99 235) !important;
+  background-color: rgb(239, 244, 255) !important;
 }
