--- a/src/app/admin/components/material-list/material-list.component.scss
+++ b/src/app/admin/components/material-list/material-list.component.scss
@@ -1,31 +1,49 @@
+.search-bar {
+  display: flex;
+  justify-content: center;
+  margin: 20px 0;
+
+  input {
+    width: 100%;
+    max-width: 400px; // Limite la largeur sur les grands écrans
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+
+    &:focus {
+      outline: none;
+      border-color: #007bff; // Couleur de mise en évidence lors de la focalisation
+    }
+  }
+}
+
 .materials-container {
-  padding: 20px;
-  background-color: #f5f5f5;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: grid;
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(200px, 1fr)
+  ); // Crée une grille responsive
+  gap: 20px;
+  padding: 0 20px;
 
   .material-item {
-    padding: 10px;
-    margin-bottom: 10px;
-    background-color: white;
     border: 1px solid #ddd;
-    border-radius: 4px;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
+    border-radius: 5px;
+    padding: 15px;
+    text-align: center;
+    background-color: #f9f9f9;
 
     p {
       margin: 0;
+      font-size: 18px;
       color: #333;
-      font-size: 16px;
-      display: flex;
-      align-items: center;
-      .fa-pencil-alt {
-        margin-left: 10px;
-        color: #007bff; // Couleur bleue, vous pouvez la changer
-        cursor: pointer;
-      }
     }
+  }
+}
+
+@media (max-width: 600px) {
+  .materials-container {
+    grid-template-columns: 1fr; // Colonne unique pour les petits écrans
   }
 }
