Added "Create Equipment" button in the header
A "Create Equipment" button has been added to the header section of the equipment management page. This button allows users to create new equipment entries.

--- a/src/app/admin/components/material-list/material-list.component.html
+++ b/src/app/admin/components/material-list/material-list.component.html
@@ -1,5 +1,13 @@
 <div class="container">
-  <h1>Gestion des équipements</h1>
+  <div class="header">
+    <h1 class="h1-title">Gestion des équipements</h1>
+    <p-button
+      severity="success"
+      icon="pi pi-plus"
+      label="Créer un équipement"
+      class="custom-button"
+    ></p-button>
+  </div>
 
   <!-- Barre de recherche PrimeNG -->
   <div class="search-bar">
