--- a/src/app/admin/components/material-list/material-list.component.scss
+++ b/src/app/admin/components/material-list/material-list.component.scss
@@ -5,6 +5,14 @@
   margin-bottom: 20px;
   color: #333;
   font-weight: bold;
+  margin-right: 10px;
+}
+
+.header {
+  display: flex; /* Utilise la mise en page Flexbox */
+  align-items: center; /* Centre verticalement les éléments */
+
+  margin-bottom: 10px; /* Réduire l'espace en bas de l'en-tête */
 }
 
 @media (max-width: 768px) {
@@ -29,6 +37,7 @@
   width: 100%;
   padding: 0 15px;
   margin-bottom: 20px;
+  margin-top: 10px;
 }
 
 .search-bar .p-input-icon-left {
