--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -189,14 +189,14 @@
                     <span class="font-medium">Salles de classe</span>
                   </a>
                 </li>
-                <li routerLink="/materials">
+                <li routerLink="/admin/materials">
                   <a
                     pRipple
                     class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2"
                     routerLinkActive="active-navlink"
                   >
                     <i
-                      class="pi pi-clock mr-2"
+                      class="pi pi-folder mr-2"
                       routerLinkActive="active-navlink"
                     ></i>
                     <span class="font-medium" routerLinkActive="active-navlink"
