feat: Add functionality to create equipment
This commit adds the ability to create new equipment items in the application. Users can now use the "Create Equipment" feature to add new equipment records to the system.

--- a/src/app/admin/components/material-list/material-list.component.html
+++ b/src/app/admin/components/material-list/material-list.component.html
@@ -6,6 +6,7 @@
       icon="pi pi-plus"
       label="Créer un équipement"
       class="custom-button"
+      (click)="showCreateMaterialDialog()"
     ></p-button>
   </div>
 
@@ -66,3 +67,7 @@
 
 <p-confirmDialog></p-confirmDialog>
 <p-toast></p-toast>
+<app-create-material
+  [display]="displayCreateMaterialDialog"
+  (equipmentCreated)="handleEquipmentCreated()"
+></app-create-material>
