feat: Add equipment editing feature
Added the ability to edit equipment names in the Material List component. Users can now click on the equipment name to transform it into an input field, make changes, and save the updates to the server. The "updatedEquipment" property was added to the Material model to track changes. When an equipment name is edited and saved, it is updated in the UI and sent to the server for persistence.

--- a/src/app/admin/components/material-list/material-list.component.html
+++ b/src/app/admin/components/material-list/material-list.component.html
@@ -41,13 +41,23 @@
     <ng-template pTemplate="body" let-material>
       <tr>
         <td>{{ material.id }}</td>
-        <td>{{ material.equipment }}</td>
+        <td *ngIf="!material.isEditing" (click)="startEditing(material)">
+          {{ material.equipment }}
+        </td>
+        <td *ngIf="material.isEditing">
+          <input
+            type="text"
+            [(ngModel)]="material.updatedEquipment"
+            (blur)="stopEditing(material)"
+          />
+        </td>
         <td>
           <!-- Boutons avec icônes et tooltips -->
           <p-button
             icon="pi pi-pencil"
             class="p-button-rounded p-button-success p-mr-2"
             tooltip="Modifier"
+            (click)="startEditing(material)"
           ></p-button>
           <p-button
             icon="pi pi-trash"
