--- a/src/app/admin/components/students/students.component.html
+++ b/src/app/admin/components/students/students.component.html
@@ -1,21 +1,63 @@
+<div class="table-container">
 <!-- users.component.html -->
-<p-table [value]="students" [paginator]="true" [rows]="13">
+<p-table #dt2
+[value]="students"
+dataKey="id"
+[rows]="10"
+[paginator]="true"
+>
     <!-- Votre en-tête de tableau -->
     <ng-template pTemplate="header">
         <tr>
-            <th>ID</th>
-            <th>Pseudo</th>
-            <th>Prénom</th>
-            <th>Nom</th>
-            <th>Email</th>
+            <th >ID</th>
+            <th >Pseudo</th>
+            <th >Prénom</th>
+            <th >Nom</th>
+            <th >Email</th>
+            <th >NIP</th>
+            <th >INE</th>
+            <th >Apprentie</th>
+            <th >Parcour</th>
+            <th >Promotion</th>
+            <th >TD</th>
+            <th >TP</th>
+        </tr>
 
-            <th>NIP</th>
-            <th>INE</th>
-            <th>Apprentie</th>
-            <th>Parcour</th>
-            <th>Promotion</th>
-            <th>TD</th>
-            <th>TP</th>
+        <tr>
+            <th></th>
+            <th>
+                <p-columnFilter type="text" field="user.username"></p-columnFilter>
+            </th>
+            <th>
+                <p-columnFilter type="text" field="user.first_name"></p-columnFilter>
+            </th>
+            <th>
+                <p-columnFilter type="text" field="user.last_name"></p-columnFilter>
+            </th>
+            <th>
+                <p-columnFilter type="text" field="user.email"></p-columnFilter>
+            </th>
+            <th>
+                <p-columnFilter type="text" field="personal_info.nip"></p-columnFilter>
+            </th>
+            <th>
+                <p-columnFilter type="text" field="personal_info.ine"></p-columnFilter>
+            </th>
+            <th>
+                <p-columnFilter type="boolean" field="personal_info.apprentice"></p-columnFilter>
+            </th>
+            <th>
+                <p-columnFilter type="text" field="academic_info.degree.name"></p-columnFilter>
+            </th>
+            <th>
+                <p-columnFilter type="text" field="academic_info.td.name"></p-columnFilter>
+            </th>
+            <th>
+                <p-columnFilter type="text" field="academic_info.promotion.level"></p-columnFilter>
+            </th>
+            <th>
+                <p-columnFilter type="text" field="academic_info.tp.name"></p-columnFilter>
+            </th>
         </tr>
     </ng-template>
     <!-- Corps du tableau -->
@@ -29,12 +71,9 @@
             <td>{{ student.personal_info.nip }}</td>
             <td>{{ student.personal_info.ine  }}</td>
             <td>
-                <span *ngIf="student.personal_info.apprentice; else notApprentice">
-                    <i class="pi pi-check" style="color: green;"></i>
-                </span>
-                <ng-template #notApprentice>
-                    <i class="pi pi-times" style="color: red;"></i>
-                </ng-template>
+                <i class="pi"
+                    [ngClass]="{ 'pi-check-circle': student.personal_info.apprentice, 'pi-times-circle': !student.personal_info.apprentice }"
+                    [ngStyle]="{ 'color': student.personal_info.apprentice ? 'green' : 'red' }"></i>
             </td>
             <td>{{ student.academic_info.degree.name }}</td>
             <td>BUT{{ student.academic_info.promotion.level }}</td>
@@ -43,4 +82,10 @@
             
         </tr>
     </ng-template>
+    <ng-template pTemplate="emptymessage">
+        <tr>
+            <td colspan="6">Aucun étudiant trouvé.</td>
+        </tr>
+    </ng-template>
 </p-table>
+</div>
