--- a/src/app/admin/components/users/users.component.html
+++ b/src/app/admin/components/users/users.component.html
@@ -1,34 +1,67 @@
 <!-- users.component.html -->
-<p-table [value]="users" [paginator]="true" [rows]="13">
-    <!-- Votre en-tête de tableau -->
-    <ng-template pTemplate="header">
-        <tr>
-            <th>ID</th>
-            <th>Pseudo</th>
-            <th>Prénom</th>
-            <th>Nom</th>
-            <th>Email</th>
-            <th>Role</th>
-            <th>Admin</th>
-        </tr>
-    </ng-template>
-    <!-- Corps du tableau -->
-    <ng-template pTemplate="body" let-user>
-        <tr>
-            <td>{{ user.id }}</td>
-            <td>{{ user.username }}</td>
-            <td>{{ user.first_name }}</td>
-            <td>{{ user.last_name }}</td>
-            <td>{{ user.email }}</td>
-            <td>{{ user.role.name }}</td>
-            <td>
-                <span *ngIf="user.isAdmin; else notIsAdmin">
-                    <i class="pi pi-check" style="color: green;"></i>
-                </span>
-                <ng-template #notIsAdmin>
-                    <i class="pi pi-times" style="color: red;"></i>
-                </ng-template>
-            </td>
-        </tr>
-    </ng-template>
+<!-- users.component.html -->
+<p-table
+    #dt2
+    [value]="users"
+    dataKey="id"
+    [rows]="10"
+    [paginator]="true"
+>
+<ng-template pTemplate="header">
+    <tr>
+        <th >ID</th>
+        <th >Pseudo</th>
+        <th >Prénom</th>
+        <th >Nom</th>
+        <th >Email</th>
+        <th >Role</th>
+        <th >Admin</th>
+    </tr>
+    <tr>
+        <th></th>
+        <th>
+            <p-columnFilter type="text" field="username"></p-columnFilter>
+        </th>
+        <th>
+            <p-columnFilter type="text" field="first_name"></p-columnFilter>
+        </th>
+        <th>
+            <p-columnFilter type="text" field="last_name"></p-columnFilter>
+        </th>
+        <th>
+            <p-columnFilter type="text" field="email"></p-columnFilter>
+        </th>
+        <th>
+            <p-columnFilter type="text" field="role.name"></p-columnFilter>
+        </th>
+        <th>
+            <p-columnFilter type="boolean" field="isAdmin"></p-columnFilter>
+        </th>
+    </tr>
+</ng-template>
+<ng-template pTemplate="body" let-user>
+    <tr>
+        <td>{{ user.id }}</td>
+        <td>{{ user.username }}</td>
+        <td>{{ user.first_name }}</td>
+        <td>{{ user.last_name }}</td>
+        <td>{{ user.email }}</td>
+        <td>{{ user.role.name }}</td>
+        <td>
+            <i class="pi"
+            [ngClass]="{ 'pi-check-circle': user.isAdmin, 'pi-times-circle': !user.isAdmin }"
+            [ngStyle]="{ 'color': user.isAdmin ? 'green' : 'red' }">
+        </i>
+        </td>
+    </tr>
+</ng-template>
+<ng-template pTemplate="emptymessage">
+    <tr>
+        <td colspan="6">Aucun utilisateur trouvé.</td>
+    </tr>
+</ng-template>
 </p-table>
+
+
+
+
