add_user with form

--- a/src/app/admin/components/users/users.component.html
+++ b/src/app/admin/components/users/users.component.html
@@ -59,8 +59,12 @@
     <tr>
         <td colspan="6">Aucun utilisateur trouvé.</td>
     </tr>
+    
 </ng-template>
+
 </p-table>
+<p-button routerLink="add" label="Ajouter un utilisateur" [rounded]="true" ></p-button>
+
 
 
 
