feature add one student

--- a/src/app/admin/components/students/students.component.html
+++ b/src/app/admin/components/students/students.component.html
@@ -88,4 +88,5 @@ dataKey="id"
         </tr>
     </ng-template>
 </p-table>
+<p-button routerLink="add" label="Ajouter un étudiant" [rounded]="true" ></p-button>
 </div>
