Ajout de matériel dans une salle

--- a/src/app/admin/components/classroom-equipment-dialog/classroom-equipment-dialog.component.html
+++ b/src/app/admin/components/classroom-equipment-dialog/classroom-equipment-dialog.component.html
@@ -9,5 +9,5 @@
     <label for="quantity">Quantité :</label>
     <input id="quantity" type="number" [(ngModel)]="selectedQuantity" min="1">
   </div>
-  <button (click)="chooseEquipment()">Ajouter à la salle de classe</button>
+  <button class="w3-btn w3-blue w3-block w3-round-xlarge" (click)="chooseEquipment()">Ajouter à la salle de classe</button>
 </div>
