--- a/src/app/admin/components/single-classroom/single-classroom.component.html
+++ b/src/app/admin/components/single-classroom/single-classroom.component.html
@@ -1,4 +1,7 @@
 
+<button class="w3-button w3-blue w3-round" (click)="goBack()">
+    <i class="pi pi-arrow-left"></i> Retour 
+</button>
 
 <h1 *ngIf="classroomData">Salle de classe: {{ classroomData.name }}</h1>
 <p *ngIf="classroomData">Capacité: {{ classroomData.capacity }}</p>
