--- a/src/app/admin/components/teachers/teachers.component.html
+++ b/src/app/admin/components/teachers/teachers.component.html
@@ -62,3 +62,5 @@ dataKey="id"
         </tr>
     </ng-template>
 </p-table>
+
+<p-button routerLink="add" label="Ajouter un enseignant" [rounded]="true" ></p-button>
