--- a/src/app/admin/components/training-list/training-list.component.html
+++ b/src/app/admin/components/training-list/training-list.component.html
@@ -114,7 +114,7 @@
               <button
                 pButton
                 type="button"
-                label="Save"
+                label="Sauvegarder"
                 (click)="stopEditing(training)"
                 class="p-button-success"
               ></button>
