features update users

--- a/src/app/admin/components/form/add-teachers/add-teachers.component.html
+++ b/src/app/admin/components/form/add-teachers/add-teachers.component.html
@@ -33,7 +33,7 @@
                     <input pinputtext="" id="initial" type="text" class="p-inputtext p-component p-element" formControlName="initial">
                 </div>
                 <div class="field col">
-                    <label htmlfor="desktop">Bureau</label>
+                    <label htmlfor="desktop">Bureau (si aucun, ne rien entrer)</label>
                     <input pinputtext="" id="desktop" type="text" class="p-inputtext p-component p-element" formControlName="desktop">
                 </div>
             </div>
