Page absence améliorée

--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -1,7 +1,7 @@
 <div class="min-h-screen flex relative lg:static surface-section">
   <div id="app-sidebar"
     class="surface-section h-full lg:h-auto hidden lg:block flex-shrink-0 absolute lg:static left-0 top-0 z-1 border-right-1 surface-border select-none"
-    style="width: 280px">
+    style="width: 280px; z-index: 1000 !important;">
     <div class="fixed flex flex-column h-full" style="width: 280px">
       <div class="flex align-items-center px-5 flex-shrink-0 gap-3 pt-1 cursor-pointer" routerLink="/dashboard">
         <div>
