--- a/src/app/absences/components/absences-layout/absences-layout.component.html
+++ b/src/app/absences/components/absences-layout/absences-layout.component.html
@@ -1,21 +1,195 @@
-<div class="absences-layout">
+<div class="container">
 
-    <div class="col-12 xl:col-6 w-full">
-        <div class="surface-card shadow-2 border-round p-4">
-            <div class="text-xl text-900 font-medium mb-5">Absences ce semestre</div>
-            <apx-chart [series]="chartOptions.series" [chart]="chartOptions.chart"
-                [xaxis]="chartOptions.xaxis"></apx-chart>
+    <div class="flex align-item-center border-round p-4 relative" style="background-color: rgb(255, 236, 236);">
+        <div>
+            <h1 class="text-2xl font-semibold">Mes absences</h1>
+            <p class="text-900 -mt-2">Consulter et transmettre un justificatif pour mes absences.</p>
+        </div>
+        <div class="absolute hidden sm:hidden md:block" style="top: -14px; right: 50px;">
+            <img src="/assets/images/3dicons/clock.png" alt="cube" width="180px">
         </div>
     </div>
 
-    <div *ngIf="absencesData.length > 0">
+    <div class="mt-6">
+        <h3>Statistiques</h3>
+        <div class="grid">
+            <div class="col-12 md:col-6 lg:col-4">
+                <div class="surface-card shadow-1 p-3 border-round relative overflow-hidden">
+                    <div class="flex justify-content-between mb-3">
+                        <div>
+                            <span class="block text-500 font-medium mb-3 z-1 relative">Total semestriel</span>
+                            <div class="text-900 font-medium text-xl relative">{{ absencesData.length }}</div>
+                        </div>
+                        <!-- <div class="flex align-items-center justify-content-center bg-blue-100 border-round"
+                            style="width:2.5rem;height:2.5rem">
+                            <i class="pi pi-chart-line text-blue-500 text-xl"></i>
+                        </div> -->
+                    </div>
+                    <div *ngIf="this.calculateTotalHours(absencesData) === 0">
+                        <span class="text-green-500 font-medium z-1 relative">Aucun cours manqué</span>
+                    </div>
+                    <div *ngIf="this.calculateTotalHours(absencesData) > 0">
+                        <span class="text-500 z-2 relative">Soit </span>
+                        <span class="text-red-500 font-medium relative z-1">{{ this.calculateTotalHours(absencesData)
+                            }}h</span>
+                        <span class="text-500 z-5 relative"> de cours manqués</span>
+                    </div>
 
-        <h2>Vous avez {{ absencesData.length }} absences pour un total de {{ this.calculateTotalHours(absencesData) }}h
-            d'absence</h2>
+                    <div class="absolute text-100 z-0" style="top: 32px; right: -32px;">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-clock z-0"
+                            width="128" height="128" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
+                            fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                            <path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0" />
+                            <path d="M12 7v5l3 3" />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 md:col-6 lg:col-4">
+                <div class="surface-card shadow-1 p-3 border-round relative overflow-hidden">
+                    <div class="flex justify-content-between mb-3">
+                        <div>
+                            <span class="block text-500 font-medium mb-3 relative z-1">Absences non justifiées</span>
+                            <div class="text-900 font-medium text-xl relative z-1">1</div>
+                        </div>
+                        <!-- <div class="flex align-items-center justify-content-center bg-red-100 border-round"
+                            style="width:2.5rem;height:2.5rem">
+                            <i class="pi pi-times-circle text-red-500 text-xl"></i>
+                        </div> -->
+                    </div>
+                    <span class="text-500 z-1 relative">Dont </span>
+                    <span class="text-orange-500 font-medium z-1 relative">1</span>
+                    <span class="text-500 z-1 relative"> transmis pour justification</span>
 
-        <app-single-absence *ngFor="let absence of absencesData" [absence]="absence">
+                    <div class="absolute text-100 z-0" style="top: 32px; right: -32px;">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-exclamation-circle"
+                            width="128" height="128" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
+                            fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                            <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+                            <path d="M12 9v4" />
+                            <path d="M12 16v.01" />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 md:col-6 lg:col-4">
+                <div class="surface-card shadow-1 p-3 border-round relative overflow-hidden">
+                    <div class=" flex justify-content-between mb-3">
+                        <div>
+                            <span class="block text-500 font-medium mb-3 relative">Absences justifiées</span>
+                            <div class="text-900 font-medium text-xl relative">1</div>
+                        </div>
+                        <!-- <div class="flex align-items-center justify-content-center bg-green-100 border-round"
+                            style="width:2.5rem;height:2.5rem">
+                            <i class="pi pi-check-circle text-green-500 text-xl"></i>
+                        </div> -->
+                    </div>
+                    <span class="text-500 relative">= </span>
+                    <span class="text-500 relative">2h00</span>
 
-        </app-single-absence>
+                    <div class="absolute text-100 z-0" style="top: 32px; right: -32px;">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-circle-check"
+                            width="128" height="128" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
+                            fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                            <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+                            <path d="M9 12l2 2l4 -4" />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <h3 class="mt-7">Récapitulatif des absences</h3>
+        <div class="shadow-1 border-round p-4 pt-2">
+            <div class="flex justify-content-between mt-5 mb-4">
+                <input class="w-full sm:w-full lg:w-3 md:w-3" type="text" pInputText placeholder="Rechercher" />
+            </div>
+
+            <!-- Tableau PrimeNG avec pagination et responsive layout -->
+            <p-table [value]="absencesData" [paginator]="true" [rows]="10">
+                <ng-template pTemplate="header">
+                    <tr>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-absence>
+                    <tr>
+                        <td>
+                            <ng-container *ngIf="absence.justify; else notJustified">
+                                <div class="text-green-500">
+                                    <svg xmlns="http://www.w3.org/2000/svg"
+                                        class="icon icon-tabler icon-tabler-circle-check" width="32" height="32"
+                                        viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                                        stroke-linecap="round" stroke-linejoin="round">
+                                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                        <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+                                        <path d="M9 12l2 2l4 -4" />
+                                    </svg>
+                                </div>
+                            </ng-container>
+                            <ng-template #notJustified>
+                                <div class="text-red-500">
+                                    <svg xmlns="http://www.w3.org/2000/svg"
+                                        class="icon icon-tabler icon-tabler-exclamation-circle" width="32" height="32"
+                                        viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                                        stroke-linecap="round" stroke-linejoin="round">
+                                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                        <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+                                        <path d="M12 9v4" />
+                                        <path d="M12 16v.01" />
+                                    </svg>
+                                </div>
+                            </ng-template>
+                        </td>
+                        <td>
+                            <div class="font-semibold mb-2">
+                                {{ absence.resource_name }}
+                            </div>
+                            <div class="text-900 text-sm">
+                                le {{ absence.course_date | date:'E d MMM yyyy' }} de {{
+                                convertirEtFormaterHeure(absence.course_start_time) }} à {{
+                                convertirEtFormaterHeure(absence.course_end_time) }}
+                            </div>
+                            <div>
+                                <span class="text-500 text-sm">
+                                    {{ calculateTimeDifference(absence.course_start_time, absence.course_end_time) }}
+                                    de cours manquées
+                                </span>
+                            </div>
+                            <div>
+                                <span class="text-500 text-sm">
+                                    Motif : <span class="text-blue-500">{{ absence.reason === "" ? "SANS EXCUSES" :
+                                        absence.reason }}</span>
+                                </span>
+                            </div>
+                            <div class="mt-2">
+                                <span class="text-500 text-sm">
+                                    {{ absence.justify ? 'Absence justifiée' : 'Absence non justifiée' }}
+                                </span>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="flex align-items-center justify-content-center">
+                                <button pButton pRipple tooltipPosition="top" icon="pi pi-plus"
+                                    class="p-button-rounded p-button-text"><span
+                                        class="ml-2 font-medium hidden sm:hidden lg:block md:block">Transmettre un
+                                        justificatif</span></button>
+                            </div>
+                        </td>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate=" emptymessage">
+                    <tr>
+                        <td colspan="7">Aucune absence enregistrée.</td>
+                    </tr>
+                </ng-template>
+            </p-table>
+        </div>
     </div>
 
 </div>
