--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,16 @@ body {
     padding: 0;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+}
+
+
 /* ===== Scrollbar CSS ===== */
   /* Firefox */
   * {
