feat: Add training creation functionality  This commit adds the ability to create a new training, including specifying the training name and degree. It also includes validation to ensure that both the name and degree are provided before creating the training.
This commit adds the ability to create a new training, including specifying the training name and degree. It also includes validation to ensure that both the name and degree are provided before creating the training.

--- a/src/app/admin/components/training-list/training-list.component.html
+++ b/src/app/admin/components/training-list/training-list.component.html
@@ -1,5 +1,10 @@
 <div class="container">
-  <!-- Header Section -->
+  <app-create-training
+    *ngIf="displayCreateTrainingDialog"
+    [degrees]="degrees"
+    (trainingCreated)="onTrainingCreated($event)"
+  ></app-create-training>
+
   <div
     class="flex align-item-center border-round p-4 relative"
     style="background-color: rgb(239, 244, 255)"
